com까지 퍼블리싱

--- a/index.html
+++ b/index.html
@@ -4,11 +4,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>넷플릭스 클론코딩</title>
+    <link href="./style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <title>디즈니 플러스 클론코딩</title>
 </head>
 
 <body>
-
+    <header>
+        <img src="images/logo.png" width="5%" , height="5%" />
+        <div class="menus">
+            <div class="menu">
+                <img src="images/home.png" width="14%" />
+                <span>홈</span>
+            </div>
+            <div class="menu">
+                <img src="images/search.png" width="14%">
+                <span>검색</span>
+            </div>
+            <div class="menu">
+                <img src="images/plus.png" width="10%">
+                <span>관심 콘텐츠</span>
+            </div>
+            <div class="menu">
+                <img src="images/star.png" width="12%">
+                <span>오리지널</span>
+            </div>
+            <div class="menu">
+                <img src="images/vidio.png" width="17%">
+                <span>영화</span>
+            </div>
+            <div class="menu">
+                <img src="images/tv.png" width="13%">
+                <span>시리즈</span>
+            </div>
+        </div>
+        <div class="profile">
+            <div class="profile--name">시요닝</div>
+            <img src="images/profile.jpg" class="profile--img">
+        </div>
+    </header>
+    <div class="main">
+        <div class="slideshow-container">
+            <i class="fas fa-chevron-left prev-button"></i>
+            <img src="images/banner--1.png">
+            <img src="images/banner--2.png">
+            <img src="images/banner--3.png">
+            <img src="images/banner--4.png">
+            <img src="images/banner--5.png">
+            <img src="images/banner--6.png">
+            <img src="images/banner--7.png">
+            <img src="images/banner--8.png">
+            <img src="images/banner--9.png">
+            <img src="images/banner--10.png">
+            <img src="images/banner--11.png">
+            <img src="images/banner--12.png">
+            <img src="images/banner--13.png">
+            <img src="images/banner--14.png">
+            <img src="images/banner--15.png">
+            <i class="fas fa-chevron-right next-button"></i>
+        </div>
+    </div>
+    <div class="company">
+        <div class="com">
+            <img src="images/com--1.png" width="170px">
+        </div>
+        <div class="com">
+            <img src="images/com--2.png" width="150px">
+        </div>
+        <div class="com">
+            <img src="images/com--3.png" width="130px">
+        </div>
+        <div class="com">
+            <img src="images/com--4.png" width="140px">
+        </div>
+        <div class="com">
+            <img src="images/com--5.png" width="160px">
+        </div>
+        <div class="com">
+            <img src="images/com--6.png" width="130px">
+        </div>
+    </div>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
