디즈니 플러스 메인페이지 퍼블리싱

--- a/index.html
+++ b/index.html
@@ -66,22 +66,94 @@
     </div>
     <div class="company">
         <div class="com">
-            <img src="images/com--1.png" width="170px">
+            <img src="images/com--1.png" width="150px">
         </div>
         <div class="com">
-            <img src="images/com--2.png" width="150px">
+            <img src="images/com--2.png" width="130px">
         </div>
         <div class="com">
-            <img src="images/com--3.png" width="130px">
+            <img src="images/com--3.png" width="110px">
         </div>
         <div class="com">
-            <img src="images/com--4.png" width="140px">
+            <img src="images/com--4.png" width="120px">
         </div>
         <div class="com">
-            <img src="images/com--5.png" width="160px">
+            <img src="images/com--5.png" width="140px">
         </div>
         <div class="com">
-            <img src="images/com--6.png" width="130px">
+            <img src="images/com--6.png" width="110px">
+        </div>
+    </div>
+    <div class="korea--contents">
+        <p class="title">주목할 만한 한국 콘텐츠</p>
+        <div class="contents--img">
+            <i class="fas fa-chevron-left pr-button"></i>
+            <div class="img">
+                <img src="images/thumbnail/image1.png" class="slide">
+                <img src="images/thumbnail/image2.png" class="slide">
+                <img src="images/thumbnail/image3.png" class="slide">
+                <img src="images/thumbnail/image4.png" class="slide">
+                <img src="images/thumbnail/image5.png" class="slide">
+                <img src="images/thumbnail/image6.png" class="slide">
+                <img src="images/thumbnail/image7.png" class="slide">
+                <img src="images/thumbnail/image8.png" class="slide">
+                <img src="images/thumbnail/image9.png" class="slide">
+                <img src="images/thumbnail/image10.png" class="slide">
+                <img src="images/thumbnail/image11.png" class="slide">
+                <img src="images/thumbnail/image12.png" class="slide">
+                <img src="images/thumbnail/image13.png" class="slide">
+                <img src="images/thumbnail/image14.png" class="slide">
+                <img src="images/thumbnail/image15.png" class="slide">
+            </div>
+            <i class="fas fa-chevron-right ne-button"></i>
+        </div>
+    </div>
+    <div class="korea--contents">
+        <p class="title">디즈니+ 최신작</p>
+        <div class="contents--img1">
+            <i class="fas fa-chevron-left pr-button1"></i>
+            <div class="img">
+                <img src="images/thumbnail1/image1.png" class="slide1">
+                <img src="images/thumbnail1/image2.png" class="slide1">
+                <img src="images/thumbnail1/image3.png" class="slide1">
+                <img src="images/thumbnail1/image4.png" class="slide1">
+                <img src="images/thumbnail1/image5.png" class="slide1">
+                <img src="images/thumbnail1/image6.png" class="slide1">
+                <img src="images/thumbnail1/image7.png" class="slide1">
+                <img src="images/thumbnail1/image8.png" class="slide1">
+                <img src="images/thumbnail1/image9.png" class="slide1">
+                <img src="images/thumbnail1/image10.png" class="slide1">
+                <img src="images/thumbnail1/image11.png" class="slide1">
+                <img src="images/thumbnail1/image12.png" class="slide1">
+                <img src="images/thumbnail1/image13.png" class="slide1">
+                <img src="images/thumbnail1/image14.png" class="slide1">
+                <img src="images/thumbnail1/image15.png" class="slide1">
+            </div>
+            <i class="fas fa-chevron-right ne-button1"></i>
+        </div>
+    </div>
+    <div class="korea--contents">
+        <p class="title">액션&스릴러</p>
+        <div class="contents--img2">
+            <i class="fas fa-chevron-left pr-button2"></i>
+            <div class="img">
+                <img src="images/thumbnail/image1.png" class="slide2">
+                <img src="images/thumbnail/image2.png" class="slide2">
+                <img src="images/thumbnail/image3.png" class="slide2">
+                <img src="images/thumbnail/image4.png" class="slide2">
+                <img src="images/thumbnail/image5.png" class="slide2">
+                <img src="images/thumbnail/image6.png" class="slide2">
+                <img src="images/thumbnail/image7.png" class="slide2">
+                <img src="images/thumbnail/image8.png" class="slide2">
+                <img src="images/thumbnail/image9.png" class="slide2">
+                <img src="images/thumbnail/image10.png" class="slide2">
+                <img src="images/thumbnail/image11.png" class="slide2">
+                <img src="images/thumbnail/image12.png" class="slide2">
+                <img src="images/thumbnail/image13.png" class="slide2">
+                <img src="images/thumbnail/image14.png" class="slide2">
+                <img src="images/thumbnail/image15.png" class="slide2">
+            </div>
+            <i class="fas fa-chevron-right ne-button2"></i>
         </div>
     </div>
     <script src="script.js" defer></script>
